Fix close button not visiblel on mobile

--- a/styles/onboarding.module.css
+++ b/styles/onboarding.module.css
@@ -94,6 +94,6 @@
 
 	.closeButton {
 		right: 0;
-		top: -40px;
+		top: 40px;
 	}
 }
